RichYPath doesn't contain optional members